Fix user menu login button on mobile

--- a/src/app/layout/header/header.component.scss
+++ b/src/app/layout/header/header.component.scss
@@ -62,6 +62,7 @@ nav {
         height: 60px;
         width: 100%;
         z-index: 10000;
+        padding-top: 2px;
         background-color: white;
         left: 0;
         > .col {
@@ -80,7 +81,7 @@ nav {
         justify-content: space-between;
         .logo-container {
           img {
-            height: 42px;
+            height: 35px;
           }
         }
       }
